// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Lead Story 1 Slice Slice matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-179k3k0"
    >
      <div
        class="css-8jh8ij"
      >
        <div
          class="css-dl45po"
        >
          <div
            class="css-1qkqv92"
          />
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 1
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article1"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-8gj81n"
                  >
                    Article 1
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag1"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 1
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 1
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-11bei24"
              data-testid="divider"
            />
          </div>
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 2
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article2"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Article 2
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag2"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 2
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 2
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-hbf6qc"
      >
        <div
          class="css-gre9re"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1fgalmf"
          >
            <div
              class="css-15edd2j"
            >
              <hr
                aria-hidden="true"
                class="css-1bwjg6b"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1sqhgnb"
            >
              <div
                class="css-1l8qede"
              >
                <div
                  class="css-uxw9nr"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Saracens an inclusive club? They didn't look out for me"
                      class="css-1qgqq71"
                      src="/assets/main_01.jpg"
                    />
                  </picture>
                </div>
                <p
                  class="css-9pk24b"
                >
                  Credit
                </p>
              </div>
              <div
                class="css-gpke1l"
              >
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1tplk7g"
                    >
                      Saracens an inclusive club? They didn't look out for me
                    </span>
                  </span>
                </a>
                <p
                  class="css-vdfsd1"
                >
                  Lyon lock Joel Kpoku tells Will Kelleher that he's fired up to face old team — and urges more English stars to move to France
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-64fvyz"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-11l110t"
            >
              <hr
                aria-hidden="true"
                class="css-9fhm4e"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-194m366"
          >
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_01.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/european-cup-winner-mihajlovic-dies"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-64fvyz"
                    >
                      Flag
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-givux0"
            >
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_02.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/american-owners-pose-threat-to-english-pyramid"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        American owners pose threat to English pyramid
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1gxwbub"
      >
        <div
          class="css-1osy5lm"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-35mzo8"
          data-testid="article-container"
          style="position: relative;"
        >
          <div
            class="css-niwyl0"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_01.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <div
                class="css-13byt3y"
              >
                <a
                  class="css-bxykrz"
                  href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      European cup winner Mihajlovic dies aged 53 after battle with leukemia
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-64fvyz"
                  >
                    Flag1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-niwyl0"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_02.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <div
                class="css-13byt3y"
              >
                <a
                  class="css-bxykrz"
                  href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      American owners pose threat to English pyramid
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            class="css-niwyl0"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_03.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <div
                class="css-13byt3y"
              >
                <a
                  class="css-bxykrz"
                  href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-niwyl0"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_04.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <div
                class="css-13byt3y"
              >
                <a
                  class="css-bxykrz"
                  href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Blow for rebel clubs as court says UEFA can block Super League
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <span
                    class="css-64fvyz"
                  >
                    Flag4
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-niwyl0"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_04.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <div
                class="css-13byt3y"
              >
                <a
                  class="css-bxykrz"
                  href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Blow for rebel clubs as court says UEFA can block Super League
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-64fvyz"
                  >
                    Flag5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-13fsx86"
        >
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-1f0staz"
              data-testid="divider"
            />
          </div>
          <div
            class="css-16w3nt8"
          >
            <div
              class="css-194m366"
            >
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-niwyl0"
                >
                  <div
                    class="css-1kwj960"
                  >
                    <picture
                      class="css-zp0elg"
                    >
                      <div
                        class="css-5pczz7"
                      />
                      <img
                        alt="This is ALT Text"
                        class="css-1qgqq71"
                        src="/assets/small_04.jpg"
                      />
                    </picture>
                  </div>
                  <div
                    class="css-diffbd"
                  >
                    <div
                      class="css-13byt3y"
                    >
                      <a
                        class="css-bxykrz"
                        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                        role="link"
                      >
                        <span
                          class="css-17x5lw"
                        >
                          <span
                            class="css-65zrxz"
                          >
                            Blow for rebel clubs as court says UEFA can block Super League
                          </span>
                        </span>
                      </a>
                      <div
                        class="css-1atazsr"
                        data-testid="tag-and-flag"
                      >
                        <span
                          class="css-64fvyz"
                        >
                          Flag4
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-givux0"
              >
                <hr
                  aria-hidden="true"
                  class="css-13rcg9f"
                  data-testid="divider"
                />
              </div>
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-niwyl0"
                >
                  <div
                    class="css-1kwj960"
                  >
                    <picture
                      class="css-zp0elg"
                    >
                      <div
                        class="css-5pczz7"
                      />
                      <img
                        alt="This is ALT Text"
                        class="css-1qgqq71"
                        src="/assets/small_04.jpg"
                      />
                    </picture>
                  </div>
                  <div
                    class="css-diffbd"
                  >
                    <div
                      class="css-13byt3y"
                    >
                      <a
                        class="css-bxykrz"
                        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                        role="link"
                      >
                        <span
                          class="css-17x5lw"
                        >
                          <span
                            class="css-65zrxz"
                          >
                            Blow for rebel clubs as court says UEFA can block Super League
                          </span>
                        </span>
                      </a>
                      <div
                        class="css-1atazsr"
                        data-testid="tag-and-flag"
                      >
                        <a
                          class="css-10d4t8c"
                          href="/"
                        >
                          <span
                            class="css-17x5lw"
                          >
                            <span
                              class="css-pwugga"
                            >
                              Tag
                            </span>
                          </span>
                        </a>
                        <div
                          class="css-lew009"
                        >
                          <hr
                            aria-hidden="true"
                            class="css-15kf7hd"
                            data-testid="divider"
                          />
                        </div>
                        <span
                          class="css-64fvyz"
                        >
                          Flag5
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Lead Story 1 Slice modifies articles correctly when breakpointKey is "md" 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-179k3k0"
    >
      <div
        class="css-8jh8ij"
      >
        <div
          class="css-dl45po"
        >
          <div
            class="css-1qkqv92"
          />
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 1
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article1"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-8gj81n"
                  >
                    Article 1
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag1"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 1
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 1
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-11bei24"
              data-testid="divider"
            />
          </div>
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 2
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article2"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Article 2
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag2"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 2
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 2
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-hbf6qc"
      >
        <div
          class="css-gre9re"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1fgalmf"
          >
            <div
              class="css-15edd2j"
            >
              <hr
                aria-hidden="true"
                class="css-1bwjg6b"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1sqhgnb"
            >
              <div
                class="css-1l8qede"
              >
                <div
                  class="css-uxw9nr"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Saracens an inclusive club? They didn't look out for me"
                      class="css-1qgqq71"
                      src="/assets/main_01.jpg"
                    />
                  </picture>
                </div>
                <p
                  class="css-9pk24b"
                >
                  Credit
                </p>
              </div>
              <div
                class="css-gpke1l"
              >
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1tplk7g"
                    >
                      Saracens an inclusive club? They didn't look out for me
                    </span>
                  </span>
                </a>
                <p
                  class="css-vdfsd1"
                >
                  Lyon lock Joel Kpoku tells Will Kelleher that he's fired up to face old team — and urges more English stars to move to France
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-64fvyz"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-11l110t"
            >
              <hr
                aria-hidden="true"
                class="css-9fhm4e"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-194m366"
          >
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_01.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/european-cup-winner-mihajlovic-dies"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-64fvyz"
                    >
                      Flag
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-givux0"
            >
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_02.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/american-owners-pose-threat-to-english-pyramid"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        American owners pose threat to English pyramid
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1gxwbub"
      >
        <div
          class="css-1osy5lm"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-35mzo8"
          data-testid="article-container"
          style="position: relative;"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_01.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukemia
                  </span>
                </span>
              </a>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag1
                </span>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_02.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    American owners pose threat to English pyramid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_03.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
              <div
                class="css-1atazsr"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-13fsx86"
        >
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-1f0staz"
              data-testid="divider"
            />
          </div>
          <div
            class="css-16w3nt8"
          >
            <div
              class="css-194m366"
            >
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-1nw1nne"
                >
                  <div
                    class="css-diffbd"
                  >
                    <a
                      class="css-u57k3c"
                      href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                      role="link"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-65zrxz"
                        >
                          Blow for rebel clubs as court says UEFA can block Super League
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-1atazsr"
                      data-testid="tag-and-flag"
                    >
                      <span
                        class="css-64fvyz"
                      >
                        Flag4
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-17jjsyb"
              >
                <hr
                  aria-hidden="true"
                  class="css-13rcg9f"
                  data-testid="divider"
                />
              </div>
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-1nw1nne"
                >
                  <div
                    class="css-diffbd"
                  >
                    <a
                      class="css-u57k3c"
                      href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                      role="link"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-65zrxz"
                        >
                          Blow for rebel clubs as court says UEFA can block Super League
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-1atazsr"
                      data-testid="tag-and-flag"
                    >
                      <a
                        class="css-10d4t8c"
                        href="/"
                      >
                        <span
                          class="css-17x5lw"
                        >
                          <span
                            class="css-pwugga"
                          >
                            Tag
                          </span>
                        </span>
                      </a>
                      <div
                        class="css-lew009"
                      >
                        <hr
                          aria-hidden="true"
                          class="css-15kf7hd"
                          data-testid="divider"
                        />
                      </div>
                      <span
                        class="css-64fvyz"
                      >
                        Flag5
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Lead Story 1 Slice modifies articles correctly when breakpointKey is "xs" 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-179k3k0"
    >
      <div
        class="css-8jh8ij"
      >
        <div
          class="css-dl45po"
        >
          <div
            class="css-1qkqv92"
          />
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 1
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article1"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-8gj81n"
                  >
                    Article 1
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag1"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 1
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 1
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-11bei24"
              data-testid="divider"
            />
          </div>
          <div
            class="css-h18yzn"
          >
            <div
              class="css-13byt3y"
            >
              <div
                class="css-13byt3y"
              >
                <span
                  class="css-1x1ve0y"
                >
                  TAGL1 2
                </span>
              </div>
              <a
                class="css-u57k3c"
                href="/article2"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Article 2
                  </span>
                </span>
              </a>
              <p
                class="css-vdfsd1"
              >
                Lorem ipsum dolor sit amet.
              </p>
              <div
                class="css-13s74dp"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/tag2"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-pwugga"
                    >
                      Tag 2
                    </span>
                  </span>
                </a>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-64fvyz"
                >
                  Flag 2
                </span>
              </div>
              <ul
                class="css-1dl3yfl"
                role="list"
              >
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 1
                    </p>
                  </div>
                </li>
                <li
                  class="css-czt13m"
                >
                  <div
                    class="css-16r6s3u"
                  >
                    <div
                      aria-hidden="true"
                      class="css-wmopxz"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-z5ltm7-EmotionIconBase ex0cdmw0"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="css-1ja8y7g"
                    >
                      List item 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-hbf6qc"
      >
        <div
          class="css-gre9re"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1fgalmf"
          >
            <div
              class="css-15edd2j"
            >
              <hr
                aria-hidden="true"
                class="css-1bwjg6b"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1sqhgnb"
            >
              <div
                class="css-1l8qede"
              >
                <div
                  class="css-uxw9nr"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Saracens an inclusive club? They didn't look out for me"
                      class="css-1qgqq71"
                      src="/assets/main_01.jpg"
                    />
                  </picture>
                </div>
                <p
                  class="css-9pk24b"
                >
                  Credit
                </p>
              </div>
              <div
                class="css-gpke1l"
              >
                <a
                  class="css-10h0i3c"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1tplk7g"
                    >
                      Saracens an inclusive club? They didn't look out for me
                    </span>
                  </span>
                </a>
                <p
                  class="css-vdfsd1"
                >
                  Lyon lock Joel Kpoku tells Will Kelleher that he's fired up to face old team — and urges more English stars to move to France
                </p>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-pwugga"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-64fvyz"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-11l110t"
            >
              <hr
                aria-hidden="true"
                class="css-9fhm4e"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-194m366"
          >
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-tj8oo8"
                >
                  <div
                    class="css-1qkqv92"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-exb5cr"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/european-cup-winner-mihajlovic-dies"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-64fvyz"
                    >
                      Flag
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fgalmf"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-tj8oo8"
                >
                  <div
                    class="css-1qkqv92"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-exb5cr"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/american-owners-pose-threat-to-english-pyramid"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        American owners pose threat to English pyramid
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-47dioy"
      >
        <div
          class="css-1osy5lm"
        >
          <div
            class="css-1qkqv92"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
        </div>
        <div
          class="css-1r18k3i"
        >
          <div
            class="css-6uqogc"
            data-testid="scroll-container"
          >
            <div
              class="css-35mzo8"
              data-testid="article-container"
              style="position: relative;"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_01.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-64fvyz"
                    >
                      Flag1
                    </span>
                  </div>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_02.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        American owners pose threat to English pyramid
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_03.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_04.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        Blow for rebel clubs as court says UEFA can block Super League
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <span
                      class="css-64fvyz"
                    >
                      Flag4
                    </span>
                  </div>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_04.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        Blow for rebel clubs as court says UEFA can block Super League
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-1atazsr"
                    data-testid="tag-and-flag"
                  >
                    <a
                      class="css-10d4t8c"
                      href="/"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-pwugga"
                        >
                          Tag
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-64fvyz"
                    >
                      Flag5
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-13fsx86"
        >
          <div
            class="css-11l110t"
          >
            <hr
              aria-hidden="true"
              class="css-1f0staz"
              data-testid="divider"
            />
          </div>
          <div
            class="css-16w3nt8"
          >
            <div
              class="css-194m366"
            >
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-1nw1nne"
                >
                  <div
                    class="css-1kwj960"
                  >
                    <picture
                      class="css-zp0elg"
                    >
                      <div
                        class="css-5pczz7"
                      />
                      <img
                        alt="This is ALT Text"
                        class="css-1qgqq71"
                        src="/assets/small_04.jpg"
                      />
                    </picture>
                  </div>
                  <div
                    class="css-diffbd"
                  >
                    <a
                      class="css-u57k3c"
                      href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                      role="link"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-65zrxz"
                        >
                          Blow for rebel clubs as court says UEFA can block Super League
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-1atazsr"
                      data-testid="tag-and-flag"
                    >
                      <span
                        class="css-64fvyz"
                      >
                        Flag4
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-1fgalmf"
              >
                <div
                  class="css-1nw1nne"
                >
                  <div
                    class="css-1kwj960"
                  >
                    <picture
                      class="css-zp0elg"
                    >
                      <div
                        class="css-5pczz7"
                      />
                      <img
                        alt="This is ALT Text"
                        class="css-1qgqq71"
                        src="/assets/small_04.jpg"
                      />
                    </picture>
                  </div>
                  <div
                    class="css-diffbd"
                  >
                    <a
                      class="css-u57k3c"
                      href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                      role="link"
                    >
                      <span
                        class="css-17x5lw"
                      >
                        <span
                          class="css-65zrxz"
                        >
                          Blow for rebel clubs as court says UEFA can block Super League
                        </span>
                      </span>
                    </a>
                    <div
                      class="css-1atazsr"
                      data-testid="tag-and-flag"
                    >
                      <a
                        class="css-10d4t8c"
                        href="/"
                      >
                        <span
                          class="css-17x5lw"
                        >
                          <span
                            class="css-pwugga"
                          >
                            Tag
                          </span>
                        </span>
                      </a>
                      <div
                        class="css-lew009"
                      >
                        <hr
                          aria-hidden="true"
                          class="css-15kf7hd"
                          data-testid="divider"
                        />
                      </div>
                      <span
                        class="css-64fvyz"
                      >
                        Flag5
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
